--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -9,7 +9,7 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 // 默认菜单主题风格
-$base-menu-color:#bfcbd9;
+/*$base-menu-color:#bfcbd9;
 $base-menu-color-active:#f4f4f5;
 $base-menu-background:#304156;
 $base-logo-title-color: #ffffff;
@@ -19,10 +19,9 @@ $base-menu-light-background:#ffffff;
 $base-logo-light-title-color: #001529;
 
 $base-sub-menu-background:#1f2d3d;
-$base-sub-menu-hover:#001528;
+$base-sub-menu-hover:#001528;*/
 
 // 自定义暗色菜单风格
-/**
 $base-menu-color:hsla(0,0%,100%,.65);
 $base-menu-color-active:#fff;
 $base-menu-background:#001529;
@@ -34,9 +33,9 @@ $base-logo-light-title-color: #001529;
 
 $base-sub-menu-background:#000c17;
 $base-sub-menu-hover:#001528;
-*/
 
-$base-sidebar-width: 200px;
+
+$base-sidebar-width: 210px;
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
